--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ body {
 }
 
 /* Header */
-.header_conteiner {
+.header__conteiner {
   display: flex;
   height: 80px;
   border-bottom: 1px solid #ececec;
@@ -74,7 +74,7 @@ body {
   line-height: 1.2;
   color: var(--accent-color);
 }
-.logo_header {
+.logo-header {
   margin-right: 93px;
   padding-top: 24px;
   padding-bottom: 25px;
@@ -224,6 +224,8 @@ body {
   opacity: 0;
   pointer-events: none;
 }
+/* Модальное окно */
+
 .modal {
   display: block;
   min-width: 528px;
@@ -364,10 +366,15 @@ body {
   border-radius: 2px;
   transition: border-color 250ms var(--cubic-bezier);
 }
-.modal__checkbox:checked:focus .modal__checkbox-unchecked {
-  opacity: 0;
+.modal__checkbox:focus ~ .modal__checkbox-icon {
+  opacity: 1;
+  background-color: var(--accent-color);
+  fill: #fff;
 }
-
+.modal__checkbox:focus ~ .modal__checkbox-unchecked,
+.modal__checkbox:hover ~ .modal__checkbox-unchecked {
+  border-color: var(--accent-color);
+}
 .modal__accept-link {
   display: inline-block;
   text-decoration: underline;
@@ -624,7 +631,7 @@ body {
 .footer__logo-text {
   color: var(--hero-color);
 }
-.logo__footer {
+.logo--footer {
   margin-bottom: 20px;
 }
 .footer__adress-wrapper {
@@ -686,4 +693,109 @@ body {
 }
 .footer__subscription-latter {
   margin-left: 10px;
+}
+/* main-pertfolio  */
+.page-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.portfolio-nav {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 50px;
+}
+.portfolio-nav__item {
+  margin-right: 8px;
+}
+.portfolio-nav__item:last-child {
+  margin-right: 0;
+}
+.card-set {
+  display: flex;
+  flex-wrap: wrap;
+}
+.card-set__item {
+  max-width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  background-color: #fff;
+  border: 1px solid #eeeeee;
+  transition: box-shadow 250ms var(--cubic-bezier);
+}
+.card-set__product-thumb {
+  position: relative;
+  overflow: hidden;
+}
+.card-set__overlay {
+  display: block;
+  padding: 63px 24px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  background-color: rgba(33, 150, 243, 0.9);
+
+  font-size: 18px;
+  line-height: 1.56;
+
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms var(--cubic-bezier);
+  opacity: 0;
+}
+
+.card-set__item:nth-child(3n) {
+  margin-right: 0;
+}
+.card-set__item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+.card-set__item:hover,
+.card-set__item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.card-set__item:hover .card-set__overlay,
+.card-set__item:focus .card-set__overlay {
+  transform: translateY(0%);
+  opacity: 1;
+}
+
+.btn {
+  padding: 6px 22px;
+
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.625;
+  background-color: var(--batton-portfolio);
+  color: var(--title-text-color);
+  cursor: pointer;
+  border: unset;
+  border-radius: 4px;
+}
+.btn:hover,
+.btn:focus {
+  background-color: var(--accent-color);
+  color: var(--page-color);
+}
+
+.btn--current {
+  color: var(--page-color);
+  background-color: var(--accent-color);
+}
+
+.card-set__title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+.card-set__text {
+  font-size: 16px;
+  line-height: 2;
+}
+.card-set__text-box {
+  padding: 20px 24px;
 }
