--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,6 +1,7 @@
 .header__conteiner {
   display: flex;
   height: 80px;
+
   border-bottom: 1px solid #ececec;
 }
 .logo-header {
@@ -10,8 +11,9 @@
 }
 .header__contacts {
   display: flex;
-  margin-left: auto;
   align-items: center;
+  margin-left: auto;
+
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
@@ -20,14 +22,21 @@
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
-  color: var(--primery-text-color);
   letter-spacing: 0.02em;
   margin-right: 30px;
 
+  color: var(--primery-text-color);
+
   transition: color 250ms var(--cubic-bezier);
-}
-.header__contacts-item:last-child {
-  margin-right: 0;
+
+  &:last-child {
+    margin-right: 0;
+  }
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 .header__contact-link {
   display: flex;
@@ -36,8 +45,4 @@
 .header__contacts-icon {
   fill: currentColor;
   margin-right: 10px;
-}
-.header__contacts-item:hover,
-.header__contacts-item:focus {
-  color: var(--accent-color);
 }
