--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,30 +1,33 @@
 .hero {
   padding: 200px 0;
-  background-color: var(--bgc-hero-footer);
-}
-.hero__overlay {
+  background-color: var(--bgc-hero);
+
+  &__overlay {
   height: 600px;
   max-width: 1600px;
   margin: 0 auto;
+
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../images/baground/baground-hiro.jpg);
-  background-color: gray;
-}
-.hero__title {
+
+  background-color: gray;}
+
+  &__title {
   width: 696px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
-  color: var(--hero-color);
+  
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-}
+  text-align: center;
 
-.hero__backdrop {
+  color: var(--hero-color);}
+
+  &__backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -32,9 +35,13 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
-  transition: opacity 250ms var(--cubic-bezier);
-}
-.hero__backdrop--is-hidden {
+  transition: opacity 250ms var(--cubic-bezier);}
+  
+  &__backdrop--is-hidden {
   opacity: 0;
-  pointer-events: none;
+  pointer-events: none;}
 }
+
+
+
+
