--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -4,7 +4,7 @@
   font-size: 16px;
   font-weight: 500;
   line-height: 1.625;
-  background-color: var(--batton-portfolio);
+  background-color: var(--button-portfolio);
   color: var(--title-text-color);
   cursor: pointer;
   border: unset;
@@ -14,5 +14,10 @@
   &:focus {
     background-color: var(--accent-color);
     color: var(--page-color);
+  }
+
+  &--current {
+    color: var(--page-color);
+    background-color: var(--accent-color);
   }
 }
