--- a/sass/components/_card-set.scss
+++ b/sass/components/_card-set.scss
@@ -5,10 +5,12 @@
 }
 .portfolio-nav__item {
   margin-right: 8px;
+
+  &:last-child {
+    margin-right: 0;
+  }
 }
-.portfolio-nav__item:last-child {
-  margin-right: 0;
-}
+
 .card-set {
   display: flex;
   flex-wrap: wrap;
@@ -20,63 +22,24 @@
   background-color: #fff;
   border: 1px solid #eeeeee;
   transition: box-shadow 250ms var(--cubic-bezier);
-}
-.card-set__product-thumb {
-  position: relative;
-  overflow: hidden;
-}
-.card-set__overlay {
-  display: block;
-  padding: 63px 24px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  color: #fff;
-  background-color: rgba(33, 150, 243, 0.9);
 
-  font-size: 18px;
-  line-height: 1.56;
+  &:nth-child(3n) {
+    margin-right: 0;
+  }
 
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms var(--cubic-bezier);
-  opacity: 0;
-}
+  &:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
 
-.card-set__item:nth-child(3n) {
-  margin-right: 0;
-}
-.card-set__item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
-.card-set__item:hover,
-.card-set__item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 
-.card-set__item:hover .card-set__overlay,
-.card-set__item:focus .card-set__overlay {
-  transform: translateY(0%);
-  opacity: 1;
-}
-
-.btn--current {
-  color: var(--page-color);
-  background-color: var(--accent-color);
-}
-
-.card-set__title {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-}
-.card-set__text {
-  font-size: 16px;
-  line-height: 2;
-}
-.card-set__text-box {
-  padding: 20px 24px;
+  &:hover .card-set__overlay,
+  &:focus .card-set__overlay {
+    transform: translateY(0%);
+    opacity: 1;
+  }
 }
