--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -16,25 +16,30 @@
 .clients__item {
   display: flex;
   justify-content: center;
+  margin-right: 30px;
   align-items: center;
   width: 170px;
   height: 92px;
+
   border: 1px solid rgba(175, 177, 184, 1);
   border-radius: 4px;
-  margin-right: 30px;
+
   background-color: #fff;
   color: rgba(175, 177, 184, 1);
 
   transition: color 250ms var(--cubic-bezier), border-color 250ms var(--cubic-bezier);
+
+  &:hover,
+  &:focus {
+    color: #2196f3;
+    border-color: #2196f3;
+  }
+
+  &:last-child {
+    margin-right: 0;
+  }
 }
-.clients__item:last-child {
-  margin-right: 0;
-}
+
 .clients__icon {
   fill: currentColor;
-}
-.clients__item:hover,
-.clients__item:focus {
-  color: #2196f3;
-  border-color: #2196f3;
 }
