--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -9,18 +9,21 @@
 .features__list-item {
   width: 270px;
   margin-right: 30px;
-}
-.features__list-item:last-child {
-  margin-right: 0;
+
+  &:last-child {
+  margin-right: 0;}
+  
 }
 .features__icon-box {
   display: flex;
   height: 120px;
-  background: #f5f4fa;
-  border-radius: 4px;
-  margin-bottom: 30px;
+  margin-bottom: 30px;    
   justify-content: center;
   align-items: center;
+
+  border-radius: 4px;
+  
+  background: #f5f4fa;
 }
 .features-title {
   font-size: 14px;
