--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,13 +1,14 @@
 .footer {
-  background: var(--bgc-hero-footer);
   padding-top: 60px;
   padding-bottom: 60px;
+
+  background: var(--bgc-footer);
 }
 .footer__conteiner {
   display: flex;
 }
 .footer__logo-text {
-  color: var(--hero-color);
+  color: var(--footer-logo-text);
 }
 .logo--footer {
   margin-bottom: 20px;
@@ -17,25 +18,25 @@
   margin-right: 70px;
 }
 .footer__address {
-  color: var(--hero-color);
+  color: var(--footer-text);
 }
 .footer__contacts {
   color: var(--footer-contact-color);
   font-weight: 400;
-}
-.footer__contacts:hover,
-.footer__contacts:focus {
-  color: var(--accent-color);
+
+  &:hover,
+  &:focus {
+  color: var(--accent-color);}
 }
 .footer__join {
-  color: var(--page-color);
+  color: var(var(--footer-text));
   text-transform: uppercase;
   margin-bottom: 20px;
 }
 .footer__social-icon--color {
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
-  color: #ffffff;
+  color: var(--footer-text);
 
   transition: background-color 250ms var(--cubic-bezier);
 }
@@ -46,7 +47,7 @@
   margin-bottom: 20px;
   text-transform: uppercase;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--footer-text);
 }
 .footer__subscription-mail {
   display: block;
@@ -59,7 +60,7 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: inherit;
-  color: #fff;
+  color: var(--footer-text);
 }
 .footer__subscription-form {
   display: flex;
