--- a/sass/layouts/_work.scss
+++ b/sass/layouts/_work.scss
@@ -15,10 +15,11 @@
 .work__item {
   position: relative;
   margin-right: 30px;
+  &:last-child {
+  margin-right: 0;}
 }
 .work__label {
   display: flex;
-  align-items: center;
   justify-content: center;
   position: absolute;
   bottom: 0;
@@ -27,11 +28,10 @@
 
   font-weight: 700;
   line-height: 1.28;
+  align-items: center;
   text-transform: uppercase;
-  color: var(--hero-color);
+
+  color: var(--work-label);
 
   background-color: rgba(47, 48, 58, 0.8);
-}
-.work__item:last-child {
-  margin-right: 0;
 }
